syntax = "proto3";

package protoreflectextra.v1;

enum Enum {
  ENUM_VALUE_UNSPECIFIED = 0;
  ENUM_VALUE_OTHER = 1;
}

message Message {
  string string = 1;
  repeated string strings = 2;
  map<string, string> strings_to_strings = 3;

  Enum enum = 21;
  repeated Enum enums = 22;
  map<string, Enum> strings_to_enums = 23;

  Message message = 31;
  repeated Message messages = 32;
  map<string, Message> strings_to_messages = 33;


  oneof oneof {
    string string_option = 41;
    Enum enum_option = 42;
    Message message_option = 43;
  }
}
